<resources>
    <string name="app_name">UnknownCallsSaver</string>
    <string name="prefix">PREFIX</string>
    <string name="button">Start import</string>
    <string name="info">Importing unknowns</string>
    <string name="nothingToImport">Not new unknown calls to import</string>
    <string name="importNum">Imported</string>
    <string name="importFin">Importing finished for </string>
    <string name="contacts">contacts</string>
    <string name="received">Received</string>
    <string name="rejected">Rejected</string>
    <string name="missed">Missed</string>
    <string name="blocked">Blocked</string>
</resources>
